syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string company = 3;
  string email = 4;
  string password = 5;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string company = 4;
  string email = 5;
}

message GetUsersRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string email = 2;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
}