// Original file: server/proto/user.proto


export interface CreateUserRequest {
  'firstName'?: (string);
  'lastName'?: (string);
  'company'?: (string);
  'email'?: (string);
  'password'?: (string);
}

export interface CreateUserRequest__Output {
  'firstName'?: (string);
  'lastName'?: (string);
  'company'?: (string);
  'email'?: (string);
  'password'?: (string);
}
