// Original file: server/proto/user.proto


export interface GetUserByIdResponse {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'company'?: (string);
  'email'?: (string);
}

export interface GetUserByIdResponse__Output {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'company'?: (string);
  'email'?: (string);
}
